cicd/manifests/apps/mattermost/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mattermost-custom-ingress
  namespace: mattermost
spec:
  ingressClassName: istio
  rules:
    - host: mattermost.srv-lab.server.home
      http:
        paths:
          - backend:
              service:
                name: mattermost
                port:
                  number: 8065
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mattermost.srv-lab.server.home
      secretName: mattermost-tls-secret
